# fana-bass-tabs

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  package.json
apps/api/: .env.example  Dockerfile  pyproject.toml  start.sh
apps/api/src/api/: config.py  main.py  schemas.py  worker.py
apps/api/src/api/pipeline/: download.py  fretboard.py  probe.py  score.py  separate.py  tab.py  tempo.py  transcribe.py
apps/web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  index.css  types.ts  vite-env.d.ts
apps/web/src/components/: ScoreView.tsx  TabView.tsx
