[project]
name = "fana-bass-tabs-api"
version = "0.1.0"
description = "베이스 기타 트랜스크립션 API (YouTube/SoundCloud/파일 → MusicXML + Tab)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "yt-dlp>=2024.4",
    "music21>=9.1",
    "pretty-midi>=0.2",
    "numpy>=1.26",
    "librosa>=0.10",
    "arq>=0.26",
]

[project.optional-dependencies]
ml = [
    "demucs>=4.0",
    "basic-pitch>=0.3",
    "crepe>=0.0.13",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "mypy>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
