[project]
name = "fana-bass-tabs-api"
version = "0.1.0"
description = "베이스 기타 트랜스크립션 API (YouTube/SoundCloud/파일 → MusicXML + Tab)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "yt-dlp>=2025.1",
    "music21>=9.1",
    "pretty-midi>=0.2",
    "numpy>=1.26",
    "librosa>=0.10",
    "arq>=0.26",
]

[project.optional-dependencies]
ml = [
    "demucs>=4.0",
    "basic-pitch>=0.3",
    "crepe>=0.0.13",
    # torchaudio 2.6+ 가 audio save 를 torchcodec 으로 위임. 명시 안 하면
    # Demucs 가 베이스 스템 저장 시 ModuleNotFoundError: torchcodec 발생
    "torchcodec>=0.1",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "mypy>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
